--- a/examples/workload-identity.yaml
+++ b/examples/workload-identity.yaml
@@ -12,7 +12,7 @@ spec:
     serviceAccountName: simple-example
     oidcIssuerURL: https://eastus.oic.prod-aks.azure.com/00000000-0000-0000-0000-000000000000/11111111-1111-1111-1111-111111111111/
     roleAssignments:
-      - roleDefinitionName: Reader
+      - roleDefinitionName: Read Only
         scope: /subscriptions/xxxx-xxxx-xxxx
       - roleDefinitionName: Owner
         scope: /subscriptions/yyyy-yyyy-yyyy
