--- a/apis/composition.yaml
+++ b/apis/composition.yaml
@@ -10,7 +10,7 @@ spec:
   pipeline:
     - step: go-templating
       functionRef:
-        name: function-go-templating
+        name: upbound-function-go-templating
       input:
         apiVersion: gotemplating.fn.crossplane.io/v1beta1
         kind: GoTemplate
@@ -273,4 +273,4 @@ spec:
 
     - step: automatically-detect-ready-composed-resources
       functionRef:
-        name: function-auto-ready
+        name: upbound-function-auto-ready
